--- a/JS Applications/week2.1 - Remote Data & Authentications/cookBookWorkShop_Part2/index.html
+++ b/JS Applications/week2.1 - Remote Data & Authentications/cookBookWorkShop_Part2/index.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="static/site.css" />
     <link rel="stylesheet" href="static/recipe.css" />
     <script src="app.js" defer></script>
+    <script src="JS/logout.js" defer></script>
   </head>
 
   <body>
     <header>
       <h1>My Cookbook</h1>
       <nav>
-        <a class="active">Catalog</a>
+        <a href="index.html" class="active">Catalog</a>
         <div id="user">
           <a href="create.html">Create Recipe</a>
           <a id="logoutBtn" href="javascript:void(0)">Logout</a>
