--- a/JSApplications/week2.4 - Exercise/01.Forum/index.html
+++ b/JSApplications/week2.4 - Exercise/01.Forum/index.html
@@ -72,9 +72,9 @@
   
         <div class="topic-title">
           <!-- topic component  -->
-          <div class="topic-container">
+          <!-- <div class="topic-container">
 
-            </div>
+            </div> -->
 
           </div>
         </div>
