--- a/JSApplications/week2.3 - SPA/cookBookWorkShop_Part3/index.html
+++ b/JSApplications/week2.3 - SPA/cookBookWorkShop_Part3/index.html
@@ -1,31 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>My Cookbook</title>
-    <link rel="stylesheet" href="static/site.css" />
-    <link rel="stylesheet" href="static/recipe.css" />
-    <script src="app.js" defer></script>
-    <script src="JS/logout.js" defer></script>
-  </head>
 
-  <body>
-    <header>
-      <h1>My Cookbook</h1>
-      <nav>
-        <a href="index.html" class="active">Catalog</a>
-        <div id="user">
-          <a href="create.html">Create Recipe</a>
-          <a id="logoutBtn" href="javascript:void(0)">Logout</a>
-        </div>
-        <div id="guest">
-          <a href="login.html">Login</a>
-          <a href="register.html">Register</a>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <p style="color: white">Loading...</p>
-    </main>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>My Cookbook</title>
+  <link rel="stylesheet" href="static/site.css" />
+  <link rel="stylesheet" href="static/recipe.css" />
+  <link rel="stylesheet" href="static/form.css" />
+  <script src="app.js" type="module" defer></script>
+  <script src="views/logout.js" defer></script>
+</head>
+
+<body>
+  <header>
+    <h1>My Cookbook</h1>
+    <nav>
+      <a href="/" class="active">Catalog</a>
+      <div id="user">
+        <a href="/create">Create Recipe</a>
+        <a id="logoutBtn" href="javascript:void(0)">Logout</a>
+      </div>
+      <div id="guest">
+        <a href="/login">Login</a>
+        <a href="/register">Register</a>
+      </div>
+    </nav>
+  </header>
+  <main>
+
+    <section class="site-section" id="home-section">
+    </section>
+
+    <section class="site-section" id="create-section">
+      <h2>New Recipe</h2>
+      <form>
+        <label>Name: <input type="text" name="name" placeholder="Recipe name" /></label>
+        <label>Image: <input type="text" name="img" placeholder="Image URL" /></label>
+        <label class="ml">Ingredients:
+          <textarea name="ingredients" placeholder="Enter ingredients on separate lines"></textarea>
+        </label>
+        <label class="ml">Preparation:
+          <textarea name="steps" placeholder="Enter preparation steps on separate lines"></textarea>
+        </label>
+        <input type="submit" value="Create Recipe" />
+      </form>
+    </section>
+
+    <section class="site-section" id="login-section">
+      <h2>Login</h2>
+      <form>
+        <label>E-mail: <input type="text" name="email" /></label>
+        <label>Password: <input type="password" name="password" /></label>
+        <input type="submit" value="Login" />
+      </form>
+    </section>
+
+    <section class="site-section" id="register-section">
+      <h2>Register</h2>
+      <form>
+        <label>E-mail: <input type="text" name="email" /></label>
+        <label>Password: <input type="password" name="password" /></label>
+        <label>Repeat: <input type="password" name="rePass" /></label>
+        <input type="submit" value="Register" />
+      </form>
+    </section>
+
+
+  </main>
+</body>
+
 </html>
