--- a/JSApplications/week4.4 - Exercise/01.Team-Manager/example.html
+++ b/JSApplications/week4.4 - Exercise/01.Team-Manager/example.html
@@ -16,11 +16,7 @@
         <header id="titlebar" class="layout">
             <a href="#" class="site-logo">Team Manager</a>
             <nav>
-                <a href="#" class="action">Browse Teams</a>
-                <a href="#" class="action">Login</a>
-                <a href="#" class="action">Register</a>
-                <a href="#" class="action">My Teams</a>
-                <a href="#" class="action">Logout</a>
+                <!-- render navigation -->
             </nav>
         </header>
         <main>
