--- a/JSApplications/week4.4 - Exercise/01.Team-Manager/index.html
+++ b/JSApplications/week4.4 - Exercise/01.Team-Manager/index.html
@@ -23,14 +23,14 @@
 <body>
     <div id="content">
         <header id="titlebar" class="layout">
-            <a href="/" class="site-logo">Team Manager</a>
+            <!-- <a href="/" class="site-logo">Team Manager</a>
             <nav>
                 <a href="/teams" class="action">Browse Teams</a>
                 <a href="/login" class="action">Login</a>
                 <a href="#" class="action">Register</a>
                 <a href="#" class="action">My Teams</a>
                 <a href="#" class="action">Logout</a>
-            </nav>
+            </nav> -->
         </header>
         <main>
             <!-- Site Content -->
