--- a/React/JSX_Demo/index.html
+++ b/React/JSX_Demo/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <!-- <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script> -->
     <title>Document</title>
 </head>
 
 <body>
+    <noscript>You must enable JS to run this application!</noscript>
     <div id="root"></div>
-    <script type="module" src="src/index.js"></script>
+    <script type="module" src="dist/index.js"></script>
 </body>
 
 </html>
