change html template

--- a/React/1.2 Exercise/IvoPapazovExercise/html-teplate-demo/index.html
+++ b/React/1.2 Exercise/IvoPapazovExercise/html-teplate-demo/index.html
@@ -5,29 +5,22 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SEO Dream - Creative SEO HTML5 Template by TemplateMo</title>
-
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
-    rel="stylesheet">
+  <title>Softy Pinko - Bootstrap 4.0 Theme</title>
 
 
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
+  <!--
+SOFTY PINKO
+https://templatemo.com/tm-535-softy-pinko
+-->
 
   <!-- Additional CSS Files -->
-  <link rel="stylesheet" href="assets/css/fontawesome.css">
-  <link rel="stylesheet" href="assets/css/templatemo-seo-dream.css">
-  <link rel="stylesheet" href="assets/css/animated.css">
-  <link rel="stylesheet" href="assets/css/owl.css">
-  <!--
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 
-TemplateMo 563 SEO Dream
+  <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
 
-https://templatemo.com/tm-563-seo-dream
-
--->
+  <link rel="stylesheet" href="assets/css/templatemo-softy-pinko.css">
 
 </head>
 
@@ -36,11 +29,20 @@ https://templatemo.com/tm-563-seo-dream
   <script type="module" src="src/main.jsx"></script>
 
   <!-- Scripts -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/animation.js"></script>
-  <script src="assets/js/imagesloaded.js"></script>
+  <!-- jQuery -->
+  <script src="assets/js/jquery-2.1.0.min.js"></script>
+
+  <!-- Bootstrap -->
+  <script src="assets/js/popper.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+
+  <!-- Plugins -->
+  <script src="assets/js/scrollreveal.min.js"></script>
+  <script src="assets/js/waypoints.min.js"></script>
+  <script src="assets/js/jquery.counterup.min.js"></script>
+  <script src="assets/js/imgfix.min.js"></script>
+
+  <!-- Global Init -->
   <script src="assets/js/custom.js"></script>
 </body>
 
