--- a/HTML & CSS/Exam prep/03.Musicfy_Resources/index.html
+++ b/HTML & CSS/Exam prep/03.Musicfy_Resources/index.html
@@ -20,6 +20,10 @@
             </ul>
         </div>
     </nav>
+    <div class="green">
+        <h1>Plans</h1>
+    </div>
+    <div class="music"><img src="./images/music.png" alt=""></div>
 
 </body>
 
