plan cards done

--- a/HTML & CSS/Exam prep/03.Musicfy_Resources/index.html
+++ b/HTML & CSS/Exam prep/03.Musicfy_Resources/index.html
@@ -24,7 +24,46 @@
         <h1>Plans</h1>
     </div>
     <div class="music"><img src="./images/music.png" alt=""></div>
+    <div class="plans">
+        <section class="student">
+            <div>
+                <h1>Individual / Student Plan</h1>
+                <ul>
+                    <li>1 Premium account</li>
+                    <li>Cancel anytime</li>
+                    <li>15 hours/month of listening time from our audiobooks subscriber catalog</li>
+                    <li>Access to Hulu</li>
+                    <li>Discount for eligible students</li>
+                </ul>
+                <div class="button">
+                    <button>Try free for 1 month</button>
+                </div>
 
+            </div>
+            <div class="price">
+                <span>$10.99 / month after</span>
+                <span>$5.99 / month after</span>
+            </div>
+        </section>
+        <section class="family">
+            <div>
+                <h1>Family Plan</h1>
+                <ul>
+                    <li>Up to 6 Premium or Kids accounts</li>
+                    <li>Control content marked as explicit</li>
+                    <li>Access to Musicfy Kids</li>
+                    <li>Cancel anytime</li>
+                    <li>15 hours/month of listening time from our audiobooks subscriber catalog (plan manager only)</li>
+                </ul>
+                <div class="button">
+                    <button>Try free for 1 month</button>
+                </div>
+            </div>
+            <div>
+                <span>$16.99 / month after</span>
+            </div>
+        </section>
+    </div>
 </body>
 
 </html>
