dogopal section done

--- a/HTML & CSS/Exam prep/03.Musicfy_Resources/index.html
+++ b/HTML & CSS/Exam prep/03.Musicfy_Resources/index.html
@@ -64,6 +64,20 @@
             </div>
         </section>
     </div>
+    <div class="dogopal">
+        <div class="dogotext">
+            <h1>Many ways to pay and manage your plans easily, quickly and securely with DogoPal</h1>
+            <p>1. We do not share all of your financial information with sellers. Rest assured that your eligible
+                purchases are protected by DogoPal Buyer Protection. Terms apply.</p>
+            <p>2. You can easily and securely spend, send money and manage your transactions - all in one place.
+                Download the app to your smartphone or open an account online for free.</p>
+            <p>3. Pay flexibly with DogoPal. Send and receive money. Support good causes that are close to your heart.
+                Who would have thought that an app could be so versatile?</p>
+        </div>
+        <div class="dogoimg">
+            <img src="./images/dogopal.webp" alt="">
+        </div>
+    </div>
 </body>
 
 </html>
