whats-included section done

--- a/HTML & CSS/Exam prep/03.Musicfy_Resources/index.html
+++ b/HTML & CSS/Exam prep/03.Musicfy_Resources/index.html
@@ -78,6 +78,68 @@
             <img src="./images/dogopal.webp" alt="">
         </div>
     </div>
+    <div class="whats-included">
+        <h1>Experience the difference</h1>
+        <p>Go Premium and enjoy full control of your listening. Cancel anytime.</p>
+        <div class="table">
+            <div class="content">
+                <div class="features">
+                    <span>Ad-free music listening</span>
+                </div>
+                <div class="included">
+                    <img src="./images/check.svg" alt="">
+                    <img src="./images/cross.svg" alt="">
+                </div>
+            </div>
+            <div class="content">
+                <div class="features">
+                    <span>Download to listen offline</span>
+                </div>
+                <div class="included">
+                    <img src="./images/check.svg" alt="">
+                    <img src="./images/cross.svg" alt="">
+                </div>
+            </div>
+            <div class="content">
+                <div class="features">
+                    <span>Play songs in any order</span>
+                </div>
+                <div class="included">
+                    <img src="./images/check.svg" alt="">
+                    <img src="./images/cross.svg" alt="">
+                </div>
+            </div>
+            <div class="content">
+                <div class="features">
+                    <span>High audio quality</span>
+                </div>
+                <div class="included">
+                    <img src="./images/check.svg" alt="">
+                    <img src="./images/cross.svg" alt="">
+                </div>
+            </div>
+            <div class="content">
+                <div class="features">
+                    <span>Listen with friends in real time</span>
+                </div>
+                <div class="included">
+                    <img src="./images/check.svg" alt="">
+                    <img src="./images/cross.svg" alt="">
+                </div>
+            </div>
+            <div class="content">
+                <div class="features">
+                    <span>Organize listening queue</span>
+                </div>
+                <div class="included">
+                    <img src="./images/check.svg" alt="">
+                    <img src="./images/cross.svg" alt="">
+                </div>
+            </div>
+
+
+        </div>
+    </div>
 </body>
 
 </html>
