--- a/HTML & CSS/Exam prep/03.Musicfy_Resources/index.html
+++ b/HTML & CSS/Exam prep/03.Musicfy_Resources/index.html
@@ -140,6 +140,9 @@
 
         </div>
     </div>
+    <footer>
+        <p>&copy; 2024 Musicfy. All Rights Reserved.</p>
+    </footer>
 </body>
 
 </html>
